Height for textView in MyAnswersVC

--- a/you-say!/you-say!/Storyboards/Principal.storyboard
+++ b/you-say!/you-say!/Storyboards/Principal.storyboard
@@ -465,7 +465,7 @@
                                 </items>
                             </navigationBar>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="WX7-q3-liT">
-                                <rect key="frame" x="0.0" y="88" width="414" height="173.5"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="287.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="3UC-yx-hF1">
                                         <rect key="frame" x="16" y="8" width="382" height="50.5"/>
@@ -496,14 +496,14 @@
                                             </stackView>
                                         </subviews>
                                     </stackView>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contenido" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4eK-4c-rFl">
-                                        <rect key="frame" x="16" y="75.5" width="382" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2nH-4E-eg1">
+                                        <rect key="frame" x="16" y="75.5" width="382" height="134.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mvq-4C-rSi">
-                                        <rect key="frame" x="16" y="111" width="382" height="54.5"/>
+                                        <rect key="frame" x="16" y="225" width="382" height="54.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="p7N-Rm-AJD">
                                                 <rect key="frame" x="0.0" y="0.0" width="382" height="20.5"/>
@@ -567,13 +567,13 @@
                                 <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Se el primero en responder" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6X-PP-Zc1">
-                                <rect key="frame" x="91" y="441" width="232" height="24"/>
+                                <rect key="frame" x="91" y="468.5" width="232" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JSn-8l-qO6">
-                                <rect key="frame" x="0.0" y="269.5" width="414" height="554"/>
+                                <rect key="frame" x="0.0" y="383.5" width="414" height="440"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="8Xh-VE-k7H">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="1"/>
@@ -662,15 +662,16 @@
                             <constraint firstItem="WX7-q3-liT" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="AWJ-IA-kUB"/>
                             <constraint firstItem="R6J-Q9-UMz" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="ESL-l6-pcx"/>
                             <constraint firstItem="JSn-8l-qO6" firstAttribute="trailing" secondItem="3wb-7M-Mc3" secondAttribute="trailing" id="MVI-Y3-eWU"/>
+                            <constraint firstItem="Z6X-PP-Zc1" firstAttribute="top" secondItem="WX7-q3-liT" secondAttribute="bottom" constant="93" id="NMp-q1-OLX"/>
                             <constraint firstItem="q4v-sW-ono" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="QbP-Fj-eiT"/>
-                            <constraint firstItem="Z6X-PP-Zc1" firstAttribute="centerX" secondItem="3wb-7M-Mc3" secondAttribute="centerX" id="SDU-Ef-7Cg"/>
                             <constraint firstItem="WX7-q3-liT" firstAttribute="trailing" secondItem="3wb-7M-Mc3" secondAttribute="trailing" id="T7y-0w-kQi"/>
                             <constraint firstItem="R6J-Q9-UMz" firstAttribute="top" secondItem="JSn-8l-qO6" secondAttribute="bottom" constant="8" id="VsF-w0-uAl"/>
                             <constraint firstItem="q4v-sW-ono" firstAttribute="trailing" secondItem="3wb-7M-Mc3" secondAttribute="trailing" id="Z8U-8F-OjT"/>
                             <constraint firstItem="q4v-sW-ono" firstAttribute="top" secondItem="3wb-7M-Mc3" secondAttribute="top" id="cND-tR-0O7"/>
+                            <constraint firstItem="2nH-4E-eg1" firstAttribute="height" secondItem="sQy-On-QSW" secondAttribute="height" multiplier="0.15" id="ger-Mj-YMX"/>
                             <constraint firstItem="WX7-q3-liT" firstAttribute="top" secondItem="q4v-sW-ono" secondAttribute="bottom" id="hGA-YL-sqa"/>
-                            <constraint firstItem="Z6X-PP-Zc1" firstAttribute="centerY" secondItem="3wb-7M-Mc3" secondAttribute="centerY" id="jhF-Lz-yAq"/>
                             <constraint firstItem="R6J-Q9-UMz" firstAttribute="trailing" secondItem="3wb-7M-Mc3" secondAttribute="trailing" id="s3K-7N-eJr"/>
+                            <constraint firstItem="Z6X-PP-Zc1" firstAttribute="centerX" secondItem="3wb-7M-Mc3" secondAttribute="centerX" id="vug-Vg-bXY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3wb-7M-Mc3"/>
                     </view>
@@ -680,18 +681,18 @@
                         <outlet property="buttonLike" destination="jqc-oQ-q1v" id="zza-sG-C1w"/>
                         <outlet property="labelCreatorName" destination="NEZ-e0-RVv" id="WZj-8S-hbG"/>
                         <outlet property="labelNoAnswers" destination="Z6X-PP-Zc1" id="VxP-8r-wkD"/>
-                        <outlet property="labelQuestionCategory" destination="RGs-OZ-DiR" id="Ccm-IT-ZYk"/>
-                        <outlet property="labelQuestionContent" destination="4eK-4c-rFl" id="MqM-VS-OK3"/>
                         <outlet property="labelQuestionCoordinate" destination="V1U-HR-S52" id="WqR-Dg-qic"/>
                         <outlet property="labelQuestionDate" destination="pQ4-es-l8f" id="684-Pv-RjG"/>
                         <outlet property="labelTotalLikes" destination="eyO-TH-pur" id="l1b-rC-IHm"/>
                         <outlet property="tableView" destination="JSn-8l-qO6" id="i0C-IT-auH"/>
-                        <outlet property="textViewContent" destination="u9b-4W-Sdo" id="5t8-PC-pdb"/>
+                        <outlet property="textFieldQuestionCategory" destination="RGs-OZ-DiR" id="Ccm-IT-ZYk"/>
+                        <outlet property="textViewQuestionContent" destination="2nH-4E-eg1" id="nUE-eo-Vlp"/>
+                        <outlet property="textViewReply" destination="u9b-4W-Sdo" id="5t8-PC-pdb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hyl-DZ-yAf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="314.49275362318843" y="1255.5803571428571"/>
+            <point key="canvasLocation" x="313.125" y="1254.9295774647887"/>
         </scene>
     </scenes>
     <resources>
